[BlackBerry] Rounding error of destination rect of checkerboard https://bugs.webkit.org/show_bug.cgi?id=93012

Patch by Leo Yang <leoyang@rim.com> on 2012-08-02
Reviewed by Rob Buis.

Reviewed internally by Jakob Petsovits.

Intersect with the destination rectangle to eliminate the rounding error.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::blitContents):

Canonical link: https://commits.webkit.org/110858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124487 268f45cc-cd09-0410-ab3c-d52691b4dbfc